--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <script>
         let declineCount = 0; // Menghitung jumlah klik "Tidak"
         let messages = [
-            "Yakin nih? 😢 Tolong pikirkan lagi yaaa...",
+            "kok gitu:(...",
             "Plis jangan gitu 😭 Aku udah nungguin...",
-            "Kalau kamu nolak lagi, aku bakal sedih banget... 🥺",
-            "Tolongggg! Aku ga mau sendirian di Valentine 😭",
-            "Jangan bikin aku nangis dong... 😢😢😢",
-            "OKE, INI TERAKHIR! KLIK 'YA' SEKARANG ATAU AKU NGAMBEK!! 😡"
+            "ayooo, aku janji aku bakal lebih baiik... 🥺",
+            "Tolongggg! Aku ga mau sendirian 😭",
+            "Jangan bikin aku nangis :( ... 😢😢😢",
+            "ayoo laaaah pipiii..... :("
         ];
 
         function accept() {
