--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <script>
         let declineCount = 0; // Menghitung jumlah klik "Tidak"
         let messages = [
-            "kok gitu:(...",
-            "Plis jangan gitu 😭 Aku udah nungguin...",
-            "ayooo, aku janji aku bakal lebih baiik... 🥺",
+            "jangan gituuu ayooo...",
+            "aku janji aku bakal lebih baiik:( ...",
+            "Kalau kamu nolak lagi, aku bakal sedih ... 🥺",
             "Tolongggg! Aku ga mau sendirian 😭",
-            "Jangan bikin aku nangis :( ... 😢😢😢",
-            "ayoo laaaah pipiii..... :("
+            "Jangan bikin aku nangis dong... 😢😢😢",
+            "ayooo :( "
         ];
 
         function accept() {
@@ -97,7 +97,7 @@
                 message.innerHTML = messages[declineCount];
                 declineCount++;
             } else {
-                message.innerHTML = "OKE! Aku nyerah... Tapi aku tetap sayang kamu 😭❤️";
+                message.innerHTML = "udaaab ayooo :( ... Tapi aku tetap sayang kamu 😭❤️";
             }
 
             message.style.display = "block";
@@ -105,4 +105,4 @@
     </script>
 
 </body>
-  </html>
+</html>
