--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 message.innerHTML = messages[declineCount];
                 declineCount++;
             } else {
-                message.innerHTML = "udaaab ayooo :( ... Tapi aku tetap sayang kamu 😭❤️";
+                message.innerHTML = "udaaah ayooo :( ... Tapi aku tetap sayang kamu 😭❤️";
             }
 
             message.style.display = "block";
